[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/general/VarsAndDesign.tscn" type="PackedScene" id=1]
[ext_resource path="res://graphics/timetable_1afmbm.png" type="Texture" id=2]
[ext_resource path="res://graphics/TransparentButton.png" type="Texture" id=3]
[ext_resource path="res://src/rooms/Room_TH_CLASS.gd" type="Script" id=4]
[ext_resource path="res://graphics/Klasse finish.png" type="Texture" id=5]
[ext_resource path="res://graphics/timetable_1ahgti.png" type="Texture" id=6]
[ext_resource path="res://graphics/red_back_arrow.png" type="Texture" id=7]
[ext_resource path="res://graphics/tableTop.jpg" type="Texture" id=8]
[ext_resource path="res://graphics/timetable_1ahwii.png" type="Texture" id=9]
[ext_resource path="res://graphics/timetable_1ahwim.png" type="Texture" id=10]
[ext_resource path="res://graphics/timetable_1ahmbt.png" type="Texture" id=11]
[ext_resource path="res://graphics/timetable_1ahme.png" type="Texture" id=12]
[ext_resource path="res://src/Camera2D.gd" type="Script" id=13]

[node name="RoomCLASS" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="DialogBox" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.48 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/DialogBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -153.0
margin_right = 260.0
margin_bottom = 153.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/DialogBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.5
margin_top = -148.5
margin_right = 255.5
margin_bottom = 148.5
color = Color( 0.866667, 0.866667, 0.866667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/DialogBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -246.5
margin_top = -137.0
margin_right = 246.5
margin_bottom = 137.0
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/DialogBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 157.0
margin_top = 104.0
margin_right = 240.0
margin_bottom = 134.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer/DialogBox/ColorRect3"]
scale = Vector2( 0.104191, 0.0494545 )
normal = ExtResource( 3 )

[node name="Label" type="Label" parent="CanvasLayer/DialogBox/ColorRect3"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
text = "OK"
align = 1
valign = 1

[node name="BackgroundUnfocus" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="VarsAndDesign" parent="CanvasLayer2" instance=ExtResource( 1 )]

[node name="BackButton" type="Sprite" parent="CanvasLayer2"]
visible = false
position = Vector2( 56, 549 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 7 )

[node name="TouchBackButton" type="TouchScreenButton" parent="CanvasLayer2/BackButton"]
position = Vector2( -626.482, -633.934 )
scale = Vector2( 1.56009, 2.11712 )
normal = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 512, 300 )
current = true
script = ExtResource( 13 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="tableTop" type="Sprite" parent="."]
visible = false
position = Vector2( 512.222, 308.237 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 8 )

[node name="SpecialitiesSelection" type="Sprite" parent="."]
position = Vector2( 512.849, 300.009 )
scale = Vector2( 0.365636, 0.301498 )
texture = ExtResource( 5 )

[node name="buttonFS" type="TouchScreenButton" parent="SpecialitiesSelection"]
position = Vector2( -1346.75, -871.966 )
scale = Vector2( 0.514493, 0.598137 )
z_index = -5
normal = ExtResource( 3 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="SpecialitiesSelection/buttonFS"]
position = Vector2( 227.891, 108.486 )
scale = Vector2( 0.176741, 0.0960858 )
normal = ExtResource( 3 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="SpecialitiesSelection/buttonFS"]
position = Vector2( 644.238, 55.3404 )
scale = Vector2( 0.178682, 0.182899 )
normal = ExtResource( 3 )

[node name="buttonGT" type="TouchScreenButton" parent="SpecialitiesSelection"]
position = Vector2( -884.696, -869.31 )
scale = Vector2( 0.499126, 0.606419 )
normal = ExtResource( 3 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="SpecialitiesSelection/buttonGT"]
position = Vector2( 507.504, 56.8993 )
scale = Vector2( 0.18505, 0.099354 )
normal = ExtResource( 3 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="SpecialitiesSelection/buttonGT"]
position = Vector2( 364.131, 163.375 )
scale = Vector2( 0.18505, 0.102971 )
normal = ExtResource( 3 )

[node name="TouchScreenButton3" type="TouchScreenButton" parent="SpecialitiesSelection/buttonGT"]
position = Vector2( 219.738, 60.0997 )
scale = Vector2( 0.187102, 0.187165 )
normal = ExtResource( 3 )

[node name="TouchScreenButton4" type="TouchScreenButton" parent="SpecialitiesSelection/buttonGT"]
position = Vector2( 77.0583, 378.014 )
scale = Vector2( 0.180831, 0.187572 )
normal = ExtResource( 3 )

[node name="buttonMB" type="TouchScreenButton" parent="SpecialitiesSelection"]
position = Vector2( -423.113, -864.341 )
scale = Vector2( 0.496126, 0.589854 )
normal = ExtResource( 3 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="SpecialitiesSelection/buttonMB"]
position = Vector2( 208.596, 43.8245 )
scale = Vector2( 0.187941, 0.103141 )
normal = ExtResource( 3 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="SpecialitiesSelection/buttonMB"]
position = Vector2( 494.703, 154.007 )
scale = Vector2( 0.18948, 0.101744 )
normal = ExtResource( 3 )

[node name="buttonWM" type="TouchScreenButton" parent="SpecialitiesSelection"]
position = Vector2( 911.116, -869.311 )
scale = Vector2( 0.504868, 0.589854 )
normal = ExtResource( 3 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="SpecialitiesSelection/buttonWM"]
position = Vector2( 507.027, 51.2733 )
scale = Vector2( 0.184465, 0.0971613 )
normal = ExtResource( 3 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="SpecialitiesSelection/buttonWM"]
position = Vector2( 224.284, 52.925 )
scale = Vector2( 0.178502, 0.0979316 )
normal = ExtResource( 3 )

[node name="buttonWI" type="TouchScreenButton" parent="SpecialitiesSelection"]
position = Vector2( 469.031, -874.28 )
scale = Vector2( 0.505747, 0.606419 )
normal = ExtResource( 3 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="SpecialitiesSelection/buttonWI"]
position = Vector2( 71.7947, 372.314 )
scale = Vector2( 0.188728, 0.188959 )
normal = ExtResource( 3 )

[node name="buttonME" type="TouchScreenButton" parent="SpecialitiesSelection"]
position = Vector2( 17.4621, -864.341 )
scale = Vector2( 0.50337, 0.598136 )
normal = ExtResource( 3 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="SpecialitiesSelection/buttonME"]
position = Vector2( 362.258, 257.085 )
scale = Vector2( 0.185075, 0.188225 )
normal = ExtResource( 3 )

[node name="timetable_1afmbm" type="Sprite" parent="."]
visible = false
position = Vector2( 536.042, 479.397 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="timetable_1ahgti" type="Sprite" parent="."]
visible = false
position = Vector2( 994.247, 528.894 )
scale = Vector2( 0.89, 0.89 )
texture = ExtResource( 6 )

[node name="timetable_1ahmbt" type="Sprite" parent="."]
visible = false
position = Vector2( -33.8864, 134.329 )
scale = Vector2( 0.89, 0.89 )
texture = ExtResource( 11 )

[node name="timetable_1ahme" type="Sprite" parent="."]
visible = false
position = Vector2( 1210.62, 521.823 )
scale = Vector2( 0.89, 0.89 )
texture = ExtResource( 12 )

[node name="timetable_1ahwii" type="Sprite" parent="."]
visible = false
position = Vector2( 28.339, 585.463 )
scale = Vector2( 0.89, 0.89 )
texture = ExtResource( 9 )

[node name="timetable_1ahwim" type="Sprite" parent="."]
visible = false
position = Vector2( 620.894, 584.049 )
scale = Vector2( 0.89, 0.89 )
texture = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/DialogBox/ColorRect3/TouchScreenButton" to="." method="_on_DialogClose_pressed"]
[connection signal="released" from="CanvasLayer2/BackButton/TouchBackButton" to="." method="_on_TouchBackButton_released"]
[connection signal="released" from="SpecialitiesSelection/buttonFS" to="." method="_on_FS_category_released"]
[connection signal="pressed" from="SpecialitiesSelection/buttonFS/TouchScreenButton" to="." method="_on_mbm_subj_pressed"]
[connection signal="pressed" from="SpecialitiesSelection/buttonFS/TouchScreenButton2" to="." method="_on_mbm_subj_pressed"]
[connection signal="released" from="SpecialitiesSelection/buttonGT" to="." method="_on_GT_category_released"]
[connection signal="pressed" from="SpecialitiesSelection/buttonGT/TouchScreenButton" to="." method="_on_gti_subj_pressed"]
[connection signal="pressed" from="SpecialitiesSelection/buttonGT/TouchScreenButton2" to="." method="_on_gti_subj_pressed"]
[connection signal="pressed" from="SpecialitiesSelection/buttonGT/TouchScreenButton3" to="." method="_on_gti_subj_pressed"]
[connection signal="pressed" from="SpecialitiesSelection/buttonGT/TouchScreenButton4" to="." method="_on_gti_subj_pressed"]
[connection signal="released" from="SpecialitiesSelection/buttonMB" to="." method="_on_MB_category_released"]
[connection signal="pressed" from="SpecialitiesSelection/buttonMB/TouchScreenButton" to="." method="_on_mbt_subj_pressed"]
[connection signal="pressed" from="SpecialitiesSelection/buttonMB/TouchScreenButton2" to="." method="_on_mbt_subj_pressed"]
[connection signal="released" from="SpecialitiesSelection/buttonWM" to="." method="_on_WM_category_released"]
[connection signal="pressed" from="SpecialitiesSelection/buttonWM/TouchScreenButton" to="." method="_on_wim_subj_pressed"]
[connection signal="pressed" from="SpecialitiesSelection/buttonWM/TouchScreenButton2" to="." method="_on_wim_subj_pressed"]
[connection signal="released" from="SpecialitiesSelection/buttonWI" to="." method="_on_WI_category_released"]
[connection signal="pressed" from="SpecialitiesSelection/buttonWI/TouchScreenButton" to="." method="_on_wii_subj_pressed"]
[connection signal="released" from="SpecialitiesSelection/buttonME" to="." method="_on_ME_category_released"]
[connection signal="pressed" from="SpecialitiesSelection/buttonME/TouchScreenButton" to="." method="_on_me_subj_pressed"]
